Changelog for Mojolicious::Plugin::StripePayment

0.01
       * Started project
