@@ -1,3 +1,3 @@
 # You can install this projct with curl -L http://cpanmin.us | perl - https://github.com/jhthorsen/mojolicious-plugin-stripepayment/archive/master.tar.gz
-requires "perl" => "5.10.0";
+requires "Mojolicious" => "6.0";
 test_requires "Test::More" => "0.88";
